--- a/templates/base.html
+++ b/templates/base.html
@@ -377,6 +377,19 @@
     <script>
         $(document).foundation();
     </script>
+
+    {# MathJax #}
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                processEscapes: true,
+            },
+            messageStyle: "none",
+        });
+    </script>
+    <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    
     {% block additionnal-js %}{% endblock %}
 
 </body>
