Temp display special markup

--- a/assets/sass/_cssstyles.scss
+++ b/assets/sass/_cssstyles.scss
@@ -31,19 +31,23 @@ a.hidden-link-show, a.hidden-link-hide {
 .information {
 	background: #088A08;
 	color : #FFF;
+	padding: 5px;
 }
 
 .erreur {
 	background: #FE2E2E;
 	color : #FFF;
+	padding: 5px;
 }
 
 .attention {
 	background: #F79F81;
 	color : #000;
+	padding: 5px;
 }
 
 .question {
 	background: #81BEF7;
 	color : #FFF;
+	padding: 5px;
 }
