Update english version on custom block

--- a/assets/sass/_cssstyles.scss
+++ b/assets/sass/_cssstyles.scss
@@ -34,13 +34,13 @@ a.hidden-link-show, a.hidden-link-hide {
 	padding: 5px;
 }
 
-.erreur {
+.error {
 	background: #FE2E2E;
 	color : #FFF;
 	padding: 5px;
 }
 
-.attention {
+.warning {
 	background: #F79F81;
 	color : #000;
 	padding: 5px;
