--- a/templates/newsletter/new_newsletter.html
+++ b/templates/newsletter/new_newsletter.html
@@ -33,7 +33,7 @@
 					</p>
 
 					<p>
-						Zeste de Savoir se placera donc comme une solution viable à OpenClassrooms pour tous les utilisateurs qui souhaitent continuer à apprendre et partager dans les meilleurs conditions.
+						Zeste de Savoir se placera donc comme une solution viable à OpenClassrooms pour tous les utilisateurs qui souhaitent continuer à apprendre et partager dans les meilleures conditions.
 					</p>
 				</section>
 
