Remove Django-Smileys

--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -3,7 +3,6 @@
 {% load markup %}
 {% load humane_date %}
 {% load profile %}
-{% load smiley_tags %}
 
 {% block title %}
     {{ topic.title }}
@@ -229,7 +228,7 @@
             </div>
             <div class="large-10 columns">
                 <div class="row">
-                    {{ post.text|smileys|emarkdown }}
+                    {{ post.text|emarkdown }}
                 </div>
                 <div class="row right">
                     <div class="large-12 columns">
