--- a/templates/newsletter/new_newsletter.html
+++ b/templates/newsletter/new_newsletter.html
@@ -9,8 +9,10 @@
 			</header>
 			<main role="main">
 				<section>
-					<h2>Zeste de Savoir, la connaissance pour tous et sans pépins</h2>
-					<h3>Des tutoriels libres pour apprendre gratuitement et sans publicité</h3>
+					<div class="title">
+						<h2>Zeste de Savoir, la connaissance pour tous et sans pépins</h2>
+						<h3>Des tutoriels libres pour apprendre gratuitement et sans publicité</h3>
+					</div>
 
 					<a href="#en-savoir-plus" class="en-savoir-plus">En savoir plus</a>
 				</section>
