--- a/templates/newsletter/new_newsletter.html
+++ b/templates/newsletter/new_newsletter.html
@@ -37,7 +37,7 @@
 					</p>
 					
 					<p>
-						Zeste de Savoir se placera donc comme un site de référence pour toutes les personnes qui souhaitent apprendre et partager leurs connaissances dans les meilleures conditions."
+						Zeste de Savoir se placera donc comme un site de référence pour toutes les personnes qui souhaitent apprendre et partager leurs connaissances dans les meilleures conditions.
 					</p>
 				</section>
 
