Update newsletter page to add social links.

--- a/templates/newsletter/new_newsletter.html
+++ b/templates/newsletter/new_newsletter.html
@@ -52,6 +52,17 @@
 						Votre adresse email ne sera utilisée que pour vous envoyer notre newsletter, rien d'autre
 					</p>
 				</section>
+
+				<section class="social">
+					<p>
+						Parlez-en autour de vous !
+					</p>
+					<ul>
+						<li><a href="https://twitter.com/intent/tweet?text=Zeste%20de%20Savoir%20-%20Bientôt&url=http://zestedesavoir.com/teasing&via=ZesteDeSavoir" class="twitter">Twitter</a></li>
+						<li><a href="http://www.facebook.com/sharer/sharer.php?u=http://zestedesavoir.com/teasing" class="facebook">Facebook</a></li>
+						<li><a href="https://plus.google.com/share?url=http://zestedesavoir.com/teasing" class="google">Google+</a></li>
+					</ul>
+				</section>
 			</main>
 		</div>
 	</div>
