--- a/templates/member/register.html
+++ b/templates/member/register.html
@@ -22,7 +22,7 @@
                 {{ error }}
             {% endif %}
             <p>
-                <strong>Vous êtes sur le point de vous inscrire sur Progdupeupl</strong> ; si vous
+                <strong>Vous êtes sur le point de vous inscrire sur Zeste de Savoir</strong> ; si vous
                 possédez déjà un compte, merci de <a href="{% url "zds.member.views.login_view" %}">vous connecter</a>
                 à la place.
             </p>
