--- a/templates/newsletter/failed.html
+++ b/templates/newsletter/failed.html
@@ -9,7 +9,7 @@
 			<main role="main">
 				<section>
 					<hgroup>
-						<h2>Vous êtes déjà inscris à la newsletter</h2>
+						<h2>Vous êtes déjà inscrit à la newsletter</h2>
 					</hgroup>
 				</section>
 			</main>
