--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -6,7 +6,23 @@
 
 
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 960px) {
+    html,
+    body,
+    .page-container {
+        height: 100%;
+    }
+
+
+    .main-container {
+        min-height: calc(100% - 93px);
+    }
+    .home .main-container {
+        min-height: calc(100% - 95px);
+    }
+
+
+
     .screen {
         display: inline;
     }
@@ -20,6 +36,8 @@
 
     // CSS3 Effects
     .header-container {
+        z-index: 1;
+        position: relative;
         @include box-shadow(0 1px 5px rgba(0, 0, 0, .25));
     }
 
@@ -35,39 +53,108 @@
         width: 240px;
     }
 
-    .header-menu {
+    .header-container .header-menu {
         float: left;
         width: 34%;
         margin-left: .5%;
 
-        a {
+        .header-menu-list > li > a {
             max-width: 150px;
         }
+    }
+
+    .dropdown {
+        top: 60px;
+    }
+    .has-dropdown {
+        position: relative;
+        text-indent: -7px;
+
+        &:after {
+            content: " ";
+            display: block;
+            position: absolute;
+            top: 47%;
+            left: 83%;
+            height: 0;
+            width: 0;
+            border: 6px solid transparent;
+            border-top: 6px solid rgba(255, 255, 255, .7);
+        }
+        &:hover:after,
+        &:focus:after,
+        &.active:after {
+            border-top: 6px solid #FFF;
+        }
+    }
+    
+    .logbox .dropdown.my-account-dropdown ul li {
+        height: 30px;
+        line-height: 30px;
+    }
+
+    .lt-ie9 .dropdown {
+        top: 90px;
     }
 
     .header-right {
         float: right;
         width: 230px;
+
+        .dropdown {
+            right: 2.5%;
+        }
     }
 
     .ariane {
+        position: relative;
         display: block;
-        width: 100%;
-        height: 40px;
+        float: left;
+        width: calc(100% - 230px);
+        height: 30px;
 
-            ul {
+        &:after {
+            content: " ";
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 50px;
+            height: 100%;
+            @include background-image(linear-gradient(left, transparent, #e7ebec 75%));
+        }
+
+        ul {
             margin: 0;
             padding: 0;
             list-style: none;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
 
             li {
-                float: left;
-                padding-right: 10px;
+                position: relative;
+                display: inline-block;
+                padding-right: 30px;
                 line-height: 30px;
 
                 a {
                     text-decoration: none;
                     color: #084561;
+                }
+
+                &:not(:last-child):after {
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    right: 7px;
+                    content: " ";
+                    height: 30px;
+                    width: 15px;
+                    background-image: $sprite;
+                    background-repeat: no-repeat;
+                    @include sprite-pos($sprite, 'ariane');
+                    @include opacity(.2);
                 }
             }
         }
@@ -75,8 +162,8 @@
 
     .search {
         &:before {
-            display: block;
             content: " ";
+            display: block;
             position: absolute;
             left: -20px;
             height: 30px;
@@ -84,17 +171,16 @@
             @include background(linear-gradient(right, rgba(0, 0, 0, .03), rgba(0, 0, 0, 0)));
         }
         form {
-            input,
-            button {
-                height: 30px;
-                line-height: 30px;
-            }
             input {
-                padding: 0 10px;
+                padding: 8px 10px;
+                height: 14px;
                 width: 150px;
             }
             button {
+                height: 30px;
+                line-height: 30px;
                 width: 30px;
+
                 &:after {
                     top: 7px;
                 }
@@ -107,41 +193,166 @@
         }
     }
 
-    .ariane {
-        width: auto;
-        height: 30px;
-        float: left;
-    }
-
 
 
     /* ============
        Main
        ============ */
 
-    .main .content-container {
-        float: right;
-        width: 79%;
+    .main {
+        @include display(flex);
+        @include flex-direction(row-reverse);
+        height: 100%;
+        margin-left: 0;
+        padding-left: 2.5%;
 
-        .content-col {
-            width: 49.5%;
-            margin: 0 0 0 1%;
-            float: left;
+        .content-container {
+            width: 80%;
+            margin-right: 0;
 
-            &:first-child {
-                margin: 0;
+            h1,
+            h2 {
+                margin-left: 1px;
+            }
+
+            .content-col {
+                width: 49.5%;
+                margin: 0 0 0 1%;
+                float: left;
+
+                &:first-child {
+                    margin: 0;
+                }
+            }
+        }
+
+        .sidebar {
+            width: 22.5%;
+            background-color: #E3E5E5;
+            border-bottom: none;
+
+            &,
+            h3 {
+                @include background-image(
+                    linear-gradient(right, rgba(0, 0, 0, .05), transparent 15px)
+                );
+            }
+
+            h3,
+            h4,
+            ul li {
+                padding-left: 11.5%;
+            }
+
+            h3:first-child {
+                margin-top: 31px;
+            }
+
+            h4[data-chap-num] {
+                padding-left: calc(11% + 25px);
+
+                &:before {
+                    left: 11%;
+                }
+            }
+
+            &.sommaire ul li.current {
+                margin-top: 0 !important;
+                padding-top: 5px;
+                margin-bottom: 5px;
+                background-color: #d8dada;
+
+                ul {
+                    margin-top: 5px;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
+                    margin-left: calc(-11% - 10px);
+                    width: calc(111% + 10px);
+                    @include background(
+                        linear-gradient(top, rgba(0, 0, 0, .07), transparent 15px),
+                        linear-gradient(bottom, rgba(0, 0, 0, .07), transparent 15px)
+                    );
+
+                    a {
+                        padding-left: calc(11% + 30px);
+                    }
+                }
             }
         }
     }
 
-    .main .sidebar {
-        float: left;
-        width: 22.3%;
 
-        h3,
-        h4,
-        ul li {
-            padding-left: 11.1%;
+    /* ============
+       Main / Home
+       ============ */
+    .home .main {
+        .content-container {
+            width: 79%;
+            margin-left: 1.5%;
         }
+
+        .sidebar {
+            margin-top: 30px;
+            border-top: 1px solid #FFF;
+
+            h3:first-child {
+                margin-top: 0;
+            }
+        }
+    }
+
+
+    /* ============
+       Main / Forum
+       ============ */
+    .forum-message {
+        margin: 0 0 25px 2%;
+
+        .user,
+        .message {
+            &:after {
+                content: " ";
+                display: block;
+                position: absolute;
+                top: 10px;
+                height: 0;
+                width: 0;
+                border: 20px solid transparent;
+                border-left: 0;
+            }
+        }
+
+        .user {
+            position: absolute;
+            padding-top: 60px;
+            top: 0;
+            left: 0;
+
+            &:after {
+                left: 60px;
+                border-right-color: #D2D4D6;
+            }
+        }
+        .message {
+            margin-left: 80px;
+
+            &:after {
+                top: 9px;
+                left: -19px;
+                border-right-color: #FBFBFB;
+            }
+        }
+        &.helpful .message:after {
+            border-right-color: $helpful-background;
+        }
+    }
+
+
+
+    /* ==============
+        ALL: Main / Content Wrappers
+       ============== */
+    .content-wrapper {
+        margin: 0 0 0 1.5%;
     }
 }
