--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -16,13 +16,12 @@ textarea {
 }
 
 html {
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     font-size: 62.5%;
     overflow-x: hidden;
 }
-body,
-.page-container {
+body {
     font-family: "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
     background: #f4f6f6;
     font-size: 14px;
@@ -32,16 +31,12 @@ body,
     min-height: 100%;
     width: 100%;
 }
-/*
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+.page-container,
+.main-container {
+    background: #f4f6f6;
+    min-height: 100%;
 }
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-*/
+
 hr {
     display: block;
     height: 1px;
@@ -66,10 +61,11 @@ textarea {
 }
 
 .chromeframe {
-    margin: 0.2em 0;
+    margin: 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+    text-align: center;
 }
 
 .mobile-menu,
@@ -80,6 +76,21 @@ textarea {
 .ico {
     background-image: $sprite;
     background-repeat: no-repeat;
+}
+.ico-after {
+    position: relative;
+
+    &:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 16px;
+        height: 16px;
+        background-image: $sprite;
+        background-repeat: no-repeat;
+    }
 }
 
 
