--- a/assets/css/scss/_extra-wide.scss
+++ b/assets/css/scss/_extra-wide.scss
@@ -11,8 +11,13 @@
         display: inline;
     }
 
-    .header-menu {
+    .header-container .header-menu {
         width: 40%;
         margin-left: 5%;
+
+        .header-menu-list > li > a {
+            font-size: 20px;
+            font-size: 2.0rem;
+        }
     }
 }
