Base header + home integration

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,9 @@ class="active"
 
 
 
+
+{% block body_class %}home{% endblock %}
+
 {# Content #}
 {% block content_out %}
     <section class="content-col">
