--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     {% compressed_js "css3-mediaqueries" %}
     <![endif]-->
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
     <!--[if lt IE 7]>
         <p class="chromeframe">Vous utilisez un navigateur <strong>dépassé</strong>. Merci de <a href="http://browsehappy.com/">mettre à jour celui-ci</a> ou <a href="http://www.google.com/chromeframe/?redirect=true">activer Google Chrome Frame</a> pour améliorer votre expérience.</p>
     <![endif]-->
@@ -222,11 +222,11 @@
                         </ul>
                     </div>
                     <div class="search header-right" id="search">
-                        <form action="">
+                        <form action="/rechercher">
                             <input type="text" name="q" placeholder="Rechercher">
-                            <button type="submit" class="search-submit">OK</button>
+                            <button type="submit" class="ico-after search-submit" title="Lancer la recherche">OK</button>
                         </form>
-                        <a href="" class="search-more">+</a>
+                        <a href="/rechercher" title="Recherche avancée" class="search-more">+</a>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,9 @@
                 </main>
                 
 
-                <aside class="sidebar mobile-menu-bloc" data-title="{% block sidebar_title %}Catégories de tutoriels{% endblock %}">
+                <aside class="sidebar mobile-menu-bloc mobile-menu-hide"
+                       data-title="{% block sidebar_title %}Catégories de tutoriels{% endblock %}"
+                >
                     {% block sidebar %}
                         <h3>Catégories <span class="wide">de tutoriels</span></h3>
                         <h4><a href="#" class="mobile-menu-link">Sites web</a></h4>
@@ -558,7 +560,7 @@
     {# FIXME : choisir entre ce block ou celui du dessus #}
     {% block additionnal-js %}{% endblock %}
 
-    
+
 
     {# MathJax #}
     <script type="text/x-mathjax-config">
