Fix mathjax color

--- a/templates/base.html
+++ b/templates/base.html
@@ -361,6 +361,7 @@
                 inlineMath: [['$', '$'], ['\\(', '\\)']],
                 processEscapes: true,
             },
+            TeX: { extensions: ["color.js"] },
             messageStyle: "none",
         });
     </script>
