--- a/templates/article/view_pager.part.html
+++ b/templates/article/view_pager.part.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="large-6 columns">
         {% if prev %}
-            <a class="button secondary" href="{{ prev.get_absolute_url }}">
+            <a class="button secondary" href="{{ prev.get_absolute_url_online }}">
                 « {{ prev.title }}
             </a>
         {% endif %}
@@ -9,7 +9,7 @@
     <div class="large-6 columns">
         <div class="right">
             {% if next %}
-               <a class="button secondary" href="{{ next.get_absolute_url }}">
+               <a class="button secondary" href="{{ next.get_absolute_url_online }}">
                    {{ next.title }} »
                </a>
            {% endif %}
