dont send empty message back and front

--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -288,3 +288,15 @@ method="post" id="submit_form">
 {% endif %}
 
 {% endblock %}
+
+{% block additionnal-js %}
+    <script>
+        /* anwser check */
+        $('#submit_form').submit(function(e){
+            if ((!$(this).find('textarea').val()) || ($(this).find('textarea').val().replace(/^\s+/g,'').replace(/\s+$/g,'')=="")) {
+                alert('Votre message ne peut pas être vide.');
+                e.preventDefault();
+            }
+        })
+    </script>
+{% endblock %}
