--- a/templates/tutorial/view_tutorial.html
+++ b/templates/tutorial/view_tutorial.html
@@ -137,7 +137,7 @@
         </form>
         
     {% endif %}
-    <a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}" class="button secondary small expand">
+    <a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}" class="button secondary small expand">
         <i class="fi-download"></i>
         Télécharger
     </a>
